--- a/index.html
+++ b/index.html
@@ -8,13 +8,7 @@
 
     <title>Ristorante Con Fusion</title>
 
-<!-- build:css styles/main.css -->
-    <link href="../bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../bower_components/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet">
-    <link href="../bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-    <link href="styles/bootstrap-social.css" rel="stylesheet">
-    <link href="styles/mystyles.css" rel="stylesheet">
-<!-- endbuild -->
+<link rel="stylesheet" href="styles/main-6955cb7e84.css"/>
 
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -28,15 +22,7 @@
     <div ui-view="content"></div>
     <div ui-view="footer"></div>
 
-<!-- build:js scripts/main.js -->
-    <script src="../bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="../bower_components/angular/angular.min.js"></script>
-    <script src="../bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
-    <script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="scripts/app.js"></script>
-    <script src="scripts/controllers.js"></script>
-    <script src="scripts/services.js"></script>
-<!-- endbuild -->
+<script src="scripts/main-b2f121f731.js"></script>
 </body>
 
 </html>
