fixed a page breaking bug in one css style line:
<div style="vertical-align: baseline" ui-view="content"></div>

page was breaking in menu page making unfriendly user experience, by luck i saw vertical-align in pycharm and googled it.
wc3 explained it tested on works

breaks a ltitle bit if you navigate to entenstly... but on mobile works great

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 
     <div ui-view="header"></div>
-    <div ui-view="content"></div>
+    <div style="vertical-align: baseline" ui-view="content"></div>
     <div ui-view="footer"></div>
 
 <script src="scripts/main-1932de7fa1.js"></script>
